[package]
name = "htf-1"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = "0.3.30"
serde_json = "1.0.116"
url = "2.5.0"
tls-listener = "0.11.0"
rust_ls = "0.1.0"
tokio-rustls = "0.26.2"
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
dotenvy = "0.15.7"
once_cell = "1.21.1"
